# UniRender

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  UniLoader.cpp  UniRender.cpp
src/include/: UniLoader.h  UniRender.h
src/loader/: CMakeLists.txt
src/loader/obj_loader/: CMakeLists.txt  ObjLoader.cpp  ObjLoader.h
src/render/: CMakeLists.txt  RenderFactory.cpp  RenderFactory.h
src/render/common/: CMakeLists.txt  MeshManager.h
src/render/optix_path_tracing/: CMakeLists.txt  OptixPathTracing.cpp  OptixPathTracing.h
src/render/soft_path_tracing/: CMakeLists.txt  SoftPathTracing.cpp  SoftPathTracing.h
test/: CMakeLists.txt
test/demo/: CMakeLists.txt  main.cpp
test/demo/optix_path_tracing/: CMakeLists.txt
test/demo/soft_path_tracing/: CMakeLists.txt
